@@ -11,6 +11,6 @@ public class WordStatistics01 extends WordStatisticImpl {
     @Override
     public List<WordCount> getStatistics() {
         return statistics.entrySet().stream().map(it -> new WordCount(it.getKey(), it.getValue()))
-                .sorted(Comparator.comparing(WordCount::getWord)).collect(Collectors.toList());
+                .sorted(Comparator.comparing(WordCount::getWord)).toList();
     }
 }
