@@ -37,6 +37,6 @@ public class WordStatisticsSTA implements WordStatistics {
             } else {
                 return left.getWord().compareTo(right.getWord());
             }
-        }).collect(Collectors.toList());
+        }).toList();
     }
 }
